--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.17.1",
     "flash": "^1.1.0",
     "mongoose": "^5.11.8",
+    "nodemon": "^2.0.7",
     "request": "^2.88.2"
   },
   "devDependencies": {},
